[gd_scene load_steps=5 format=3 uid="uid://baelvh8oflorp"]

[ext_resource type="Theme" uid="uid://br7rkp2l10vsp" path="res://ui/hud/hud.tres" id="1_7quh5"]
[ext_resource type="Script" path="res://ui/hud/round/round_hud.gd" id="1_i46v3"]
[ext_resource type="Texture2D" uid="uid://dp1s0bxxgxls8" path="res://assets/icons/misc/clock.tres" id="3_xx2uo"]
[ext_resource type="Texture2D" uid="uid://c3ogugx82e020" path="res://assets/icons/misc/enemy.tres" id="4_etp55"]

[node name="RoundHud" type="MarginContainer"]
texture_filter = 1
offset_right = 64.0
offset_bottom = 16.0
theme = ExtResource("1_7quh5")
script = ExtResource("1_i46v3")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="RoundContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RoundDisplayLabel" type="Label" parent="MainContainer/RoundContainer"]
layout_mode = 2
text = "round"
uppercase = true

[node name="RoundLabel" type="Label" parent="MainContainer/RoundContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
text = "000"

[node name="StatusContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="TimerContainer" type="HBoxContainer" parent="MainContainer/StatusContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimerIcon" type="TextureRect" parent="MainContainer/StatusContainer/TimerContainer"]
layout_mode = 2
texture = ExtResource("3_xx2uo")

[node name="TimerLabel" type="Label" parent="MainContainer/StatusContainer/TimerContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "000"

[node name="DivilContainer" type="HBoxContainer" parent="MainContainer/StatusContainer"]
layout_mode = 2

[node name="DivilIcon" type="TextureRect" parent="MainContainer/StatusContainer/DivilContainer"]
layout_mode = 2
texture = ExtResource("4_etp55")

[node name="DivilLabel" type="Label" parent="MainContainer/StatusContainer/DivilContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00"
